--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
   <title>Renatoclt</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="manifest" href="/manifest.json">
 </head>
 <body>
   <clt-root></clt-root>
