--- a/documentation/coverage.html
+++ b/documentation/coverage.html
@@ -315,16 +315,16 @@
                 <span class="coverage-count">(0/7)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./pipes/NumberToArrayPipe.html">src/app/pipe/number-to-array.pipe.ts</a>
             </td>
             <td>pipe</td>
             <td>NumberToArrayPipe</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/1)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(1/1)</span>
             </td>
         </tr>
         <tr class="low">
