--- a/documentation/modules.html
+++ b/documentation/modules.html
@@ -72,23 +72,6 @@
             <div class="col-sm-4">
                 <div class="card card-module">
                     <div class="card-header">
-                        <h4 class="card-title">DynamicComponentModule</h4>
-                    </div>
-                    <div class="card-block">
-                                <p>
-                                    <object id="demo-svg" type="image/svg+xml" lazy="./modules/DynamicComponentModule/dependencies.svg" style="width: 100%; height: 175px;">
-                                        Your browser does not support SVG
-                                    </object>
-                                </p>
-                        <footer class="text-center">
-                            <a href="./modules/DynamicComponentModule.html" class="btn btn-default">Browse</a>
-                        </footer>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="card card-module">
-                    <div class="card-header">
                         <h4 class="card-title">FormsModule</h4>
                     </div>
                     <div class="card-block">
@@ -116,6 +99,23 @@
                                 </p>
                         <footer class="text-center">
                             <a href="./modules/NgxUtilitarioChatModule.html" class="btn btn-default">Browse</a>
+                        </footer>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card card-module">
+                    <div class="card-header">
+                        <h4 class="card-title">NgxUtilitarioDynamicModule</h4>
+                    </div>
+                    <div class="card-block">
+                                <p>
+                                    <object id="demo-svg" type="image/svg+xml" lazy="./modules/NgxUtilitarioDynamicModule/dependencies.svg" style="width: 100%; height: 175px;">
+                                        Your browser does not support SVG
+                                    </object>
+                                </p>
+                        <footer class="text-center">
+                            <a href="./modules/NgxUtilitarioDynamicModule.html" class="btn btn-default">Browse</a>
                         </footer>
                     </div>
                 </div>
