--- a/documentation/overview.html
+++ b/documentation/overview.html
@@ -76,36 +76,36 @@
 <polygon fill="none" stroke="#000000" points="836,-290 836,-342 960,-342 960,-290 836,-290"/>
 </g>
 <g id="clust20" class="cluster">
-<title>cluster_DynamicComponentModule</title>
-<polygon fill="none" stroke="#000000" stroke-dasharray="1,5" points="1989,-70 1989,-206 2261,-206 2261,-70 1989,-70"/>
-</g>
-<g id="clust25" class="cluster">
-<title>cluster_DynamicComponentModule_providers</title>
-<polygon fill="none" stroke="#000000" points="1997,-78 1997,-130 2253,-130 2253,-78 1997,-78"/>
-</g>
-<g id="clust26" class="cluster">
 <title>cluster_FormsModule</title>
 <polygon fill="none" stroke="#000000" stroke-dasharray="1,5" points="1756,-214 1756,-282 2036,-282 2036,-214 1756,-214"/>
 </g>
-<g id="clust27" class="cluster">
+<g id="clust21" class="cluster">
 <title>cluster_FormsModule_declarations</title>
 <polygon fill="none" stroke="#000000" points="1902,-222 1902,-274 2028,-274 2028,-222 1902,-222"/>
 </g>
-<g id="clust30" class="cluster">
+<g id="clust24" class="cluster">
 <title>cluster_FormsModule_exports</title>
 <polygon fill="none" stroke="#000000" points="1764,-222 1764,-274 1894,-274 1894,-222 1764,-222"/>
 </g>
-<g id="clust33" class="cluster">
+<g id="clust27" class="cluster">
 <title>cluster_NgxUtilitarioChatModule</title>
 <polygon fill="none" stroke="#000000" stroke-dasharray="1,5" points="680,-70 680,-138 1870,-138 1870,-70 680,-70"/>
 </g>
-<g id="clust34" class="cluster">
+<g id="clust28" class="cluster">
 <title>cluster_NgxUtilitarioChatModule_declarations</title>
 <polygon fill="none" stroke="#000000" points="824,-78 824,-130 1862,-130 1862,-78 824,-78"/>
 </g>
-<g id="clust42" class="cluster">
+<g id="clust36" class="cluster">
 <title>cluster_NgxUtilitarioChatModule_exports</title>
 <polygon fill="none" stroke="#000000" points="688,-78 688,-130 816,-130 816,-78 688,-78"/>
+</g>
+<g id="clust39" class="cluster">
+<title>cluster_NgxUtilitarioDynamicModule</title>
+<polygon fill="none" stroke="#000000" stroke-dasharray="1,5" points="1989,-70 1989,-206 2261,-206 2261,-70 1989,-70"/>
+</g>
+<g id="clust44" class="cluster">
+<title>cluster_NgxUtilitarioDynamicModule_providers</title>
+<polygon fill="none" stroke="#000000" points="1997,-78 1997,-130 2253,-130 2253,-78 1997,-78"/>
 </g>
 <g id="clust45" class="cluster">
 <title>cluster_NgxUtilitarioMenuModule</title>
@@ -246,13 +246,13 @@
 <polygon fill="#000000" stroke="#000000" points="949.9734,-252.5001 939.9734,-256 949.9734,-259.5001 949.9734,-252.5001"/>
 </g>
 <!-- InputComponent  -->
-<g id="node17" class="node">
+<g id="node15" class="node">
 <title>InputComponent </title>
 <polygon fill="#fb8072" stroke="#000000" points="1886.3842,-266 1771.6158,-266 1771.6158,-230 1886.3842,-230 1886.3842,-266"/>
 <text text-anchor="middle" x="1829" y="-243.8" font-family="Times,serif" font-size="14.00" fill="#000000">InputComponent </text>
 </g>
 <!-- FormsModule&#45;&gt;InputComponent  -->
-<g id="edge15" class="edge">
+<g id="edge14" class="edge">
 <title>FormsModule&#45;&gt;InputComponent </title>
 <path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M1522.8321,-198.027C1522.8321,-214.3976 1522.8321,-236 1522.8321,-236 1522.8321,-236 1761.7713,-236 1761.7713,-236"/>
 <polygon fill="#000000" stroke="#000000" points="1761.7713,-239.5001 1771.7713,-236 1761.7713,-232.5001 1761.7713,-239.5001"/>
@@ -270,13 +270,13 @@
 <polygon fill="#000000" stroke="#000000" points="949.8588,-242.5001 939.8588,-246 949.8588,-249.5001 949.8588,-242.5001"/>
 </g>
 <!-- ChatComponent  -->
-<g id="node24" class="node">
+<g id="node22" class="node">
 <title>ChatComponent </title>
 <polygon fill="#fb8072" stroke="#000000" points="807.7745,-122 696.2255,-122 696.2255,-86 807.7745,-86 807.7745,-122"/>
 <text text-anchor="middle" x="752" y="-99.8" font-family="Times,serif" font-size="14.00" fill="#000000">ChatComponent </text>
 </g>
 <!-- NgxUtilitarioChatModule&#45;&gt;ChatComponent  -->
-<g id="edge22" class="edge">
+<g id="edge21" class="edge">
 <title>NgxUtilitarioChatModule&#45;&gt;ChatComponent </title>
 <path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M1134.9093,-161.9421C1134.9093,-157.5055 1134.9093,-154 1134.9093,-154 1134.9093,-154 752,-154 752,-154 752,-154 752,-132.0511 752,-132.0511"/>
 <polygon fill="#000000" stroke="#000000" points="755.5001,-132.0511 752,-122.0511 748.5001,-132.0512 755.5001,-132.0511"/>
@@ -302,110 +302,110 @@
 <!-- NgxUtilitarioMenuModule&#45;&gt;MenuDotComponent  -->
 <g id="edge24" class="edge">
 <title>NgxUtilitarioMenuModule&#45;&gt;MenuDotComponent </title>
-<path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M1732.0111,-180C1844.1147,-180 2028.6711,-180 2028.6711,-180 2028.6711,-180 2028.6711,-248 2028.6711,-248 2028.6711,-248 2049.5917,-248 2049.5917,-248"/>
-<polygon fill="#000000" stroke="#000000" points="2049.5918,-251.5001 2059.5917,-248 2049.5917,-244.5001 2049.5918,-251.5001"/>
-</g>
-<!-- DynamicComponentService -->
-<g id="node14" class="node">
-<title>DynamicComponentService</title>
-<ellipse fill="#fdb462" stroke="#000000" cx="2125" cy="-104" rx="120.4091" ry="18"/>
-<text text-anchor="middle" x="2125" y="-99.8" font-family="Times,serif" font-size="14.00" fill="#000000">DynamicComponentService</text>
-</g>
-<!-- DynamicComponentModule -->
-<g id="node15" class="node">
-<title>DynamicComponentModule</title>
-<polygon fill="#8dd3c7" stroke="#000000" points="2213.1993,-198 2210.1993,-202 2189.1993,-202 2186.1993,-198 2036.8007,-198 2036.8007,-162 2213.1993,-162 2213.1993,-198"/>
-<text text-anchor="middle" x="2125" y="-175.8" font-family="Times,serif" font-size="14.00" fill="#000000">DynamicComponentModule</text>
-</g>
-<!-- DynamicComponentService&#45;&gt;DynamicComponentModule -->
-<g id="edge13" class="edge">
-<title>DynamicComponentService&#45;&gt;DynamicComponentModule</title>
-<path fill="none" stroke="#000000" d="M2125,-122.0109C2125,-122.0109 2125,-151.855 2125,-151.855"/>
-<polygon fill="#000000" stroke="#000000" points="2121.5001,-151.8549 2125,-161.855 2128.5001,-151.855 2121.5001,-151.8549"/>
+<path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M1731.9229,-180C1843.3278,-180 2026.1462,-180 2026.1462,-180 2026.1462,-180 2026.1462,-248 2026.1462,-248 2026.1462,-248 2049.5399,-248 2049.5399,-248"/>
+<polygon fill="#000000" stroke="#000000" points="2049.5399,-251.5001 2059.5399,-248 2049.5398,-244.5001 2049.5399,-251.5001"/>
 </g>
 <!-- InputComponent -->
-<g id="node16" class="node">
+<g id="node14" class="node">
 <title>InputComponent</title>
 <polygon fill="#ffffb3" stroke="#000000" points="2020.3837,-266 1909.6163,-266 1909.6163,-230 2020.3837,-230 2020.3837,-266"/>
 <text text-anchor="middle" x="1965" y="-243.8" font-family="Times,serif" font-size="14.00" fill="#000000">InputComponent</text>
 </g>
 <!-- InputComponent&#45;&gt;FormsModule -->
-<g id="edge14" class="edge">
+<g id="edge13" class="edge">
 <title>InputComponent&#45;&gt;FormsModule</title>
 <path fill="none" stroke="#000000" d="M1957.0518,-229.793C1957.0518,-224.4451 1957.0518,-220 1957.0518,-220 1957.0518,-220 1499,-220 1499,-220 1499,-220 1499,-208.1274 1499,-208.1274"/>
 <polygon fill="#000000" stroke="#000000" points="1502.5001,-208.1274 1499,-198.1274 1495.5001,-208.1275 1502.5001,-208.1274"/>
 </g>
 <!-- ChatBusquedaComponent -->
-<g id="node18" class="node">
+<g id="node16" class="node">
 <title>ChatBusquedaComponent</title>
 <polygon fill="#ffffb3" stroke="#000000" points="1120.4846,-122 957.5154,-122 957.5154,-86 1120.4846,-86 1120.4846,-122"/>
 <text text-anchor="middle" x="1039" y="-99.8" font-family="Times,serif" font-size="14.00" fill="#000000">ChatBusquedaComponent</text>
 </g>
 <!-- ChatBusquedaComponent&#45;&gt;NgxUtilitarioChatModule -->
-<g id="edge16" class="edge">
+<g id="edge15" class="edge">
 <title>ChatBusquedaComponent&#45;&gt;NgxUtilitarioChatModule</title>
 <path fill="none" stroke="#000000" d="M1120.7041,-104C1127.4234,-104 1131.7023,-104 1131.7023,-104 1131.7023,-104 1131.7023,-151.9891 1131.7023,-151.9891"/>
 <polygon fill="#000000" stroke="#000000" points="1128.2024,-151.989 1131.7023,-161.9891 1135.2024,-151.9891 1128.2024,-151.989"/>
 </g>
 <!-- ChatComponent -->
-<g id="node19" class="node">
+<g id="node17" class="node">
 <title>ChatComponent</title>
 <polygon fill="#ffffb3" stroke="#000000" points="939.7744,-122 832.2256,-122 832.2256,-86 939.7744,-86 939.7744,-122"/>
 <text text-anchor="middle" x="886" y="-99.8" font-family="Times,serif" font-size="14.00" fill="#000000">ChatComponent</text>
 </g>
 <!-- ChatComponent&#45;&gt;NgxUtilitarioChatModule -->
-<g id="edge17" class="edge">
+<g id="edge16" class="edge">
 <title>ChatComponent&#45;&gt;NgxUtilitarioChatModule</title>
 <path fill="none" stroke="#000000" d="M886,-122.0555C886,-133.439 886,-146 886,-146 886,-146 1128.4953,-146 1128.4953,-146 1128.4953,-146 1128.4953,-151.8056 1128.4953,-151.8056"/>
 <polygon fill="#000000" stroke="#000000" points="1124.9953,-151.8055 1128.4953,-161.8056 1131.9953,-151.8056 1124.9953,-151.8055"/>
 </g>
 <!-- ChatConversacionComponent -->
-<g id="node20" class="node">
+<g id="node18" class="node">
 <title>ChatConversacionComponent</title>
 <polygon fill="#ffffb3" stroke="#000000" points="1854.2506,-122 1669.7494,-122 1669.7494,-86 1854.2506,-86 1854.2506,-122"/>
 <text text-anchor="middle" x="1762" y="-99.8" font-family="Times,serif" font-size="14.00" fill="#000000">ChatConversacionComponent</text>
 </g>
 <!-- ChatConversacionComponent&#45;&gt;NgxUtilitarioChatModule -->
-<g id="edge18" class="edge">
+<g id="edge17" class="edge">
 <title>ChatConversacionComponent&#45;&gt;NgxUtilitarioChatModule</title>
 <path fill="none" stroke="#000000" d="M1700.7227,-122.1944C1700.7227,-130.2782 1700.7227,-138 1700.7227,-138 1700.7227,-138 1283.5048,-138 1283.5048,-138 1283.5048,-138 1283.5048,-151.9445 1283.5048,-151.9445"/>
 <polygon fill="#000000" stroke="#000000" points="1280.0048,-151.9444 1283.5048,-161.9445 1287.0048,-151.9445 1280.0048,-151.9444"/>
 </g>
 <!-- ChatDetalleAgregarComponent -->
-<g id="node21" class="node">
+<g id="node19" class="node">
 <title>ChatDetalleAgregarComponent</title>
 <polygon fill="#ffffb3" stroke="#000000" points="1652.0534,-122 1457.9466,-122 1457.9466,-86 1652.0534,-86 1652.0534,-122"/>
 <text text-anchor="middle" x="1555" y="-99.8" font-family="Times,serif" font-size="14.00" fill="#000000">ChatDetalleAgregarComponent</text>
 </g>
 <!-- ChatDetalleAgregarComponent&#45;&gt;NgxUtilitarioChatModule -->
-<g id="edge19" class="edge">
+<g id="edge18" class="edge">
 <title>ChatDetalleAgregarComponent&#45;&gt;NgxUtilitarioChatModule</title>
 <path fill="none" stroke="#000000" d="M1502.3187,-122.0579C1502.3187,-126.4945 1502.3187,-130 1502.3187,-130 1502.3187,-130 1280.2977,-130 1280.2977,-130 1280.2977,-130 1280.2977,-151.9489 1280.2977,-151.9489"/>
 <polygon fill="#000000" stroke="#000000" points="1276.7978,-151.9488 1280.2977,-161.9489 1283.7978,-151.9489 1276.7978,-151.9488"/>
 </g>
 <!-- ChatDetalleComponent -->
-<g id="node22" class="node">
+<g id="node20" class="node">
 <title>ChatDetalleComponent</title>
 <polygon fill="#ffffb3" stroke="#000000" points="1440.1965,-122 1291.8035,-122 1291.8035,-86 1440.1965,-86 1440.1965,-122"/>
 <text text-anchor="middle" x="1366" y="-99.8" font-family="Times,serif" font-size="14.00" fill="#000000">ChatDetalleComponent</text>
 </g>
 <!-- ChatDetalleComponent&#45;&gt;NgxUtilitarioChatModule -->
-<g id="edge20" class="edge">
+<g id="edge19" class="edge">
 <title>ChatDetalleComponent&#45;&gt;NgxUtilitarioChatModule</title>
 <path fill="none" stroke="#000000" d="M1291.7722,-104C1283.0002,-104 1277.0907,-104 1277.0907,-104 1277.0907,-104 1277.0907,-151.9891 1277.0907,-151.9891"/>
 <polygon fill="#000000" stroke="#000000" points="1273.5907,-151.989 1277.0907,-161.9891 1280.5907,-151.9891 1273.5907,-151.989"/>
 </g>
 <!-- ChatListaComponent -->
-<g id="node23" class="node">
+<g id="node21" class="node">
 <title>ChatListaComponent</title>
 <polygon fill="#ffffb3" stroke="#000000" points="1273.7674,-122 1138.2326,-122 1138.2326,-86 1273.7674,-86 1273.7674,-122"/>
 <text text-anchor="middle" x="1206" y="-99.8" font-family="Times,serif" font-size="14.00" fill="#000000">ChatListaComponent</text>
 </g>
 <!-- ChatListaComponent&#45;&gt;NgxUtilitarioChatModule -->
-<g id="edge21" class="edge">
+<g id="edge20" class="edge">
 <title>ChatListaComponent&#45;&gt;NgxUtilitarioChatModule</title>
 <path fill="none" stroke="#000000" d="M1206,-122.0109C1206,-122.0109 1206,-151.855 1206,-151.855"/>
 <polygon fill="#000000" stroke="#000000" points="1202.5001,-151.8549 1206,-161.855 1209.5001,-151.855 1202.5001,-151.8549"/>
+</g>
+<!-- DynamicComponentService -->
+<g id="node23" class="node">
+<title>DynamicComponentService</title>
+<ellipse fill="#fdb462" stroke="#000000" cx="2125" cy="-104" rx="120.4091" ry="18"/>
+<text text-anchor="middle" x="2125" y="-99.8" font-family="Times,serif" font-size="14.00" fill="#000000">DynamicComponentService</text>
+</g>
+<!-- NgxUtilitarioDynamicModule -->
+<g id="node24" class="node">
+<title>NgxUtilitarioDynamicModule</title>
+<polygon fill="#8dd3c7" stroke="#000000" points="2218.299,-198 2215.299,-202 2194.299,-202 2191.299,-198 2031.701,-198 2031.701,-162 2218.299,-162 2218.299,-198"/>
+<text text-anchor="middle" x="2125" y="-175.8" font-family="Times,serif" font-size="14.00" fill="#000000">NgxUtilitarioDynamicModule</text>
+</g>
+<!-- DynamicComponentService&#45;&gt;NgxUtilitarioDynamicModule -->
+<g id="edge22" class="edge">
+<title>DynamicComponentService&#45;&gt;NgxUtilitarioDynamicModule</title>
+<path fill="none" stroke="#000000" d="M2125,-122.0109C2125,-122.0109 2125,-151.855 2125,-151.855"/>
+<polygon fill="#000000" stroke="#000000" points="2121.5001,-151.8549 2125,-161.855 2128.5001,-151.855 2121.5001,-151.8549"/>
 </g>
 <!-- MenuDotComponent -->
 <g id="node25" class="node">
