--- a/documentation/pipes/NumberToArrayPipe.html
+++ b/documentation/pipes/NumberToArrayPipe.html
@@ -203,7 +203,7 @@ export class NumberToArrayPipe implements PipeTransform {
    * @example
    * *ngFor&#x3D;&quot;let item of 2 | numberToArray&quot;
    * 
-   * @param {number} length tamaño del nuevo arreglo
+   * @param length tamaño del nuevo arreglo
    * 
    * @returns un arreglo de tamaño n
    */
