--- a/documentation/coverage.html
+++ b/documentation/coverage.html
@@ -63,16 +63,16 @@
         </tr>
     </thead>
     <tbody>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./miscellaneous/variables.html#openClose">src/app/animaciones/open-close.ts</a>
             </td>
             <td>variable</td>
             <td>openClose</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/1)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(1/1)</span>
             </td>
         </tr>
         <tr class="low">
@@ -243,16 +243,16 @@
                 <span class="coverage-count">(0/2)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="good">
             <td>
                 <!-- miscellaneous -->
-                <a href="./injectables/DynamicComponentService.html">src/app/dynamic-component/dynamic-component.service.ts</a>
+                <a href="./injectables/DynamicComponentService.html">src/app/dynamic-component/dynamic-component/dynamic-component.service.ts</a>
             </td>
             <td>injectable</td>
             <td>DynamicComponentService</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/4)</span>
+            <td align="right" data-sort="66">
+                <span class="coverage-percent">66 %</span>
+                <span class="coverage-count">(2/3)</span>
             </td>
         </tr>
         <tr class="low">
@@ -339,16 +339,16 @@
                 <span class="coverage-count">(0/8)</span>
             </td>
         </tr>
-        <tr class="medium">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./classes/Fecha.html">src/app/utilitario/fecha.ts</a>
             </td>
             <td>class</td>
             <td>Fecha</td>
-            <td align="right" data-sort="42">
-                <span class="coverage-percent">42 %</span>
-                <span class="coverage-count">(3/7)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(7/7)</span>
             </td>
         </tr>
         <tr class="low">
