--- a/documentation/coverage.html
+++ b/documentation/coverage.html
@@ -231,18 +231,6 @@
                 <span class="coverage-count">(8/8)</span>
             </td>
         </tr>
-        <tr class="low">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./injectables/ClassService.html">src/app/class.service.ts</a>
-            </td>
-            <td>injectable</td>
-            <td>ClassService</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/2)</span>
-            </td>
-        </tr>
         <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
@@ -270,6 +258,18 @@
         <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
+                <a href="./components/RepeatIconComponent.html">src/app/icons/repeat-icon/repeat-icon.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>RepeatIconComponent</td>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(6/6)</span>
+            </td>
+        </tr>
+        <tr class="very-good">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./interfaces/IMenuDot.html">src/app/menu/dto/Imenu-dto.ts</a>
             </td>
             <td>interface</td>
@@ -291,22 +291,22 @@
                 <span class="coverage-count">(0/7)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
-                <a href="./components/ModalComponent.html">src/app/modal/modal.component.ts</a>
+                <a href="./components/ModalComponent.html">src/app/modal/modal/modal.component.ts</a>
             </td>
             <td>component</td>
             <td>ModalComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/9)</span>
+            <td align="right" data-sort="87">
+                <span class="coverage-percent">87 %</span>
+                <span class="coverage-count">(7/8)</span>
             </td>
         </tr>
         <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
-                <a href="./injectables/ModalService.html">src/app/modal/modal.service.ts</a>
+                <a href="./injectables/ModalService.html">src/app/modal/services/modal.service.ts</a>
             </td>
             <td>injectable</td>
             <td>ModalService</td>
@@ -325,18 +325,6 @@
             <td align="right" data-sort="100">
                 <span class="coverage-percent">100 %</span>
                 <span class="coverage-count">(1/1)</span>
-            </td>
-        </tr>
-        <tr class="low">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./components/RepeatIconComponent.html">src/app/repeat-icon/repeat-icon.component.ts</a>
-            </td>
-            <td>component</td>
-            <td>RepeatIconComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/8)</span>
             </td>
         </tr>
         <tr class="very-good">
