--- a/documentation/injectables/ModalService.html
+++ b/documentation/injectables/ModalService.html
@@ -56,7 +56,7 @@
             <h3>File</h3>
         </p>
         <p class="comment">
-            <code>src/app/modal/modal.service.ts</code>
+            <code>src/app/modal/services/modal.service.ts</code>
         </p>
 
             <p class="comment">
@@ -150,7 +150,7 @@
             <tr>
                 <td class="col-md-4">
                     <div class="io-line">Defined in <a href="" data-line="23"
-                            class="link-to-prism">src/app/modal/modal.service.ts:23</a></div>
+                            class="link-to-prism">src/app/modal/services/modal.service.ts:23</a></div>
                 </td>
             </tr>
 
@@ -227,7 +227,7 @@
             <tr>
                 <td class="col-md-4">
                     <div class="io-line">Defined in <a href="" data-line="48"
-                            class="link-to-prism">src/app/modal/modal.service.ts:48</a></div>
+                            class="link-to-prism">src/app/modal/services/modal.service.ts:48</a></div>
                 </td>
             </tr>
 
@@ -304,7 +304,7 @@
             <tr>
                 <td class="col-md-4">
                     <div class="io-line">Defined in <a href="" data-line="39"
-                            class="link-to-prism">src/app/modal/modal.service.ts:39</a></div>
+                            class="link-to-prism">src/app/modal/services/modal.service.ts:39</a></div>
                 </td>
             </tr>
 
@@ -381,7 +381,7 @@
             <tr>
                 <td class="col-md-4">
                     <div class="io-line">Defined in <a href="" data-line="31"
-                            class="link-to-prism">src/app/modal/modal.service.ts:31</a></div>
+                            class="link-to-prism">src/app/modal/services/modal.service.ts:31</a></div>
                 </td>
             </tr>
 
@@ -467,7 +467,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/app/modal/modal.service.ts:14</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/app/modal/services/modal.service.ts:14</a></div>
                             </td>
                         </tr>
 
