--- a/documentation/coverage.html
+++ b/documentation/coverage.html
@@ -75,22 +75,22 @@
                 <span class="coverage-count">(1/1)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/AppComponent.html">src/app/app.component.ts</a>
             </td>
             <td>component</td>
             <td>AppComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/5)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(2/2)</span>
             </td>
         </tr>
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
-                <a href="./components/CardsImgTextNdivComponent.html">src/app/cards-img-text-ndiv/cards-img-text-ndiv.component.ts</a>
+                <a href="./components/CardsImgTextNdivComponent.html">src/app/cards/cards-img-text-ndiv/cards-img-text-ndiv.component.ts</a>
             </td>
             <td>component</td>
             <td>CardsImgTextNdivComponent</td>
@@ -102,7 +102,7 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
-                <a href="./components/CardsImgTextComponent.html">src/app/cards-img-text/cards-img-text.component.ts</a>
+                <a href="./components/CardsImgTextComponent.html">src/app/cards/cards-img-text/cards-img-text.component.ts</a>
             </td>
             <td>component</td>
             <td>CardsImgTextComponent</td>
@@ -111,16 +111,16 @@
                 <span class="coverage-count">(2/14)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
-                <a href="./components/CardsComponent.html">src/app/cards/cards.component.ts</a>
+                <a href="./components/CardsComponent.html">src/app/cards/cards/cards.component.ts</a>
             </td>
             <td>component</td>
             <td>CardsComponent</td>
-            <td align="right" data-sort="18">
-                <span class="coverage-percent">18 %</span>
-                <span class="coverage-count">(2/11)</span>
+            <td align="right" data-sort="88">
+                <span class="coverage-percent">88 %</span>
+                <span class="coverage-count">(8/9)</span>
             </td>
         </tr>
         <tr class="low">
@@ -229,18 +229,6 @@
             <td align="right" data-sort="100">
                 <span class="coverage-percent">100 %</span>
                 <span class="coverage-count">(8/8)</span>
-            </td>
-        </tr>
-        <tr class="low">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./injectables/ClassService.html">src/app/class.service.ts</a>
-            </td>
-            <td>injectable</td>
-            <td>ClassService</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/2)</span>
             </td>
         </tr>
         <tr class="very-good">
