--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <clt-root></clt-root>
+  <ngx-utilitario-app></ngx-utilitario-app>
 </body>
 </html>
